--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>TeacherPlusWeb</title>
-  <base href="/">
+  <base href="/teacher-plus-web-app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets//images//icon1.svg">
   <link rel="preconnect" href="https://fonts.gstatic.com">
